
0.73    
        Bump required version of Wiki::Toolkit::Plugin::JSON to remove
          deprecation warnings. 
        Node JSON output now contains image information.
        Node JSON output now includes raw and html formatted content.
        Add the external class to website and map links when
          displaying them in the metadata section of a node. 

0.72    28 June 2013
        Fix the date in json output. Fixes #5
        Allow a custom template, custom_auto_map_link.tt to populate
          map links in node metadata
        Updated metadata since code and issues have moved to github
          https://github.com/OpenGuides/OpenGuides/
        Split out the node location search section of the node template.
        Add an optional custom template to node_location_search.tt 
        Added a README.pod to make github look pretty
        Updated OpenGuides.pm pod
        Add a Vagrantfile and docs to help with testing and development
        Add configuration for Travis and Coveralls
          https://travis-ci.org/OpenGuides/OpenGuides
          https://coveralls.io/r/OpenGuides/OpenGuides

0.71    16 March 2013
        Added scale to category/locale index maps.
        Fix several test failures triggered by the stricter
          Test::HTML::Content (et al) mode used when XML::LibXML is
          not installed
        Work around a "No such method textContent" bug in
          Test::HTML::Content when XML::LibXML is not installed
        Respect destdir when installing scripts, templates, etc and
          when initialising SQLite databases
        Use mkpath to create the custom template directory rather than
          mkdir, for cases where the parent directory doesn't already
          exist

0.70    26 August 2012
        New elements allowed in page content: span, dl, dt, dd (fixes #303).
        Changed external link formatting; they're now given a class of
          "external" and the previous hardcoded square brackets are no more.